fix(incoming): improve overflow styles

--- a/components/views/media/incomingCall/IncomingCall.less
+++ b/components/views/media/incomingCall/IncomingCall.less
@@ -1,27 +1,25 @@
-@width: 300px;
-
 .incoming {
+  --width: 300px;
+  --height: 380px;
+  --padding: 24px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  width: @width;
-  height: 380px;
-  padding: 1.5rem;
+  width: var(--width);
+  height: var(--height);
+  padding: var(--padding);
   background: @foreground-gradient;
   border-radius: @corner-rounding;
+  overflow: hidden;
 
   .avatar {
     margin-top: auto;
   }
 
   .user-info {
-    max-width: @width;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
+    max-width: calc(var(--width) - var(--padding) * 2);
+    margin-bottom: 0.5rem;
   }
 
   .buttons {
@@ -29,15 +27,14 @@
     width: 100%;
     justify-content: stretch;
     margin-top: auto;
-    gap: 1rem;
+    gap: 16px;
 
     > .button {
       flex-grow: 1;
     }
   }
-
   @media only screen and (max-width: @mobile-breakpoint) {
-    width: auto;
-    height: 100%;
+    --width: 100%;
+    --height: 100%;
   }
 }
